--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head><body><hi><a href=index.html>WEB</a></hi>
-    <h1>Hwang JH</h1> 
-    <h3>JH Hwang</h3>
-    <img src="홍최근사지.jpg" widt30%"></body></head>
+        <hi><a href=index.html>HOSTING</a></hi>
+    </body></head>
 </html>
