--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
     <head><body><hi><a href=index.html>WEB</a></hi>
         <hi><a href=index.html>HOSTING</a></hi>
+        <img src="홍최근사지.jpg" width="10%">
     </body></head>
 </html>
