--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head><body><hi><a href=index.html>WEB</a></hi>
-        <hi><a href=index.html>HOSTING</a></hi>
+    <head><body><hi><a href=index.html>WEB</a></hi><br>
+        <hi><a href=index.html>HOSTING</a></hi><br>
         <img src="홍최근사지.jpg" width="10%">
     </body></head>
 </html>
